# multisweeper

./: README.md
client/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
client/src/lib/: env.ts
server/: Cargo.toml
server/src/: error.rs  main.rs
server/src/cli_local/: mod.rs
server/src/game/: action.rs  board.rs  error.rs  mod.rs
server/src/protocol/: mod.rs
server/src/server/: mod.rs
server/src/ws/: lobby.rs  lobby_game.rs  mod.rs  player.rs
server/src/ws/protocol/: mod.rs
