[package]
name = "multisweeper-server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.31", features = ["sink"] }
rand = "0.9.2"
rand_pcg = "0.9.0"
rmp-serde = "1.3.0"
serde = {version = "1.0.228", features=["derive"]}
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.43"
tracing-forest = {version="0.3.0", features=["ansi", "chrono"]}
